--- a/toolbar-sample/package.json
+++ b/toolbar-sample/package.json
@@ -21,7 +21,24 @@
         "command": "popover-command",
         "title": "Popover Clicked"
       }
-    ]
+    ],
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "myExtension",
+          "title": "My Extension",
+          "icon": "path/to/icon.png"
+        }
+      ]
+    },
+    "views": {
+      "myExtensionView": [
+        {
+          "id": "myExtension.view",
+          "name": "My View"
+        }
+      ]
+    }
   },
   "kaitianContributes": {
     "browserMain": "./out/browser/index.js",
@@ -65,27 +82,43 @@
           }
         }
       ]
+    },
+    "viewsProxies": [
+      "Leftview"
+    ],
+    "browserViews": {
+      "left": {
+        "type": "add",
+        "view": [
+          {
+            "id": "Leftview",
+            "icon": "extension"
+          }
+        ]
+      }
     }
   },
   "scripts": {
     "prepublishOnly": "npm run compile",
     "compile": "sumi compile",
+    "fix": "export NODE_OPTIONS=--openssl-legacy-provider",
     "watch": "sumi watch",
     "dev": "sumi dev -e=$(pwd)"
   },
   "devDependencies": {
-    "@types/node": "^10.12.21",
-    "@types/vscode": "^1.39.0",
-    "@types/react": "^16.9.9",
     "@opensumi/cli": "latest",
-    "tslint": "^5.12.1",
-    "typescript": "^3.4.5",
-    "vscode": "^1.1.28",
+    "@opensumi/sumi": "latest",
+    "@types/node": "^10.12.21",
+    "@types/react": "^16.9.9",
+    "@types/vscode": "^1.39.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "@opensumi/sumi": "latest"
+    "tslint": "^5.12.1",
+    "typescript": "^3.4.5",
+    "vscode": "^1.1.28"
   },
   "dependencies": {
+    "@opensumi/extension-logger": "^1.0.2",
     "@opensumi/ide-components": "latest"
   }
 }
